--- a/backend/Greenhouse/requirements.txt
+++ b/backend/Greenhouse/requirements.txt
@@ -1,4 +1,16 @@
 asgiref==3.8.1
+async-timeout==4.0.3
+attrs==23.2.0
+autobahn==23.6.2
+Automat==22.10.0
+bidict==0.23.1
+cffi==1.16.0
+channels==4.1.0
+channels-redis==4.2.0
+click==8.1.7
+constantly==23.10.4
+cryptography==42.0.8
+daphne==4.1.2
 dj-rest-auth==6.0.0
 Django==5.0.6
 django-cors-headers==3.10.1
@@ -8,12 +20,31 @@ django-rest-auth==0.9.5
 djangorestframework==3.15.2
 djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==5.3.1
+h11==0.14.0
+hyperlink==21.0.0
+idna==3.7
+incremental==22.10.0
 logger==1.4
 Markdown==3.6
+msgpack==1.0.8
 mysqlclient==2.2.4
 paho-mqtt==2.1.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
 PyJWT==2.8.0
+pyOpenSSL==24.1.0
 python-dotenv==1.0.1
+python-engineio==4.9.1
+python-socketio==5.11.3
+redis==5.0.7
+service-identity==24.1.0
+simple-websocket==1.0.0
 six==1.16.0
 sqlparse==0.5.0
+Twisted==24.3.0
+txaio==23.1.1
 typing_extensions==4.12.2
+uvicorn==0.30.1
+wsproto==1.2.0
+zope.interface==6.4.post2
