--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,18 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.3",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-gauge-chart": "^0.5.1",
+    "react-router-dom": "^6.26.0",
+    "react-toastify": "^10.0.5",
+    "sockjs-client": "^1.6.1",
+    "websocket": "^1.0.35",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
