--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,14 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.6",
+    "@mui/styles": "^6.0.1",
+    "@react-spring/web": "^9.7.4",
     "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-gauge-chart": "^0.5.1",
     "react-router-dom": "^6.26.0",
